# Data-IQ

./: .pre-commit-config.yaml  README.md  requirements-minimum.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
data_iq/: dataiq_class.py
src/models/: cnn_models.py  nlp_models.py
src/utils/: data_loader.py  exp3_helpers.py  group_dro_helpers.py  utils.py
tutorial/: demo_data.py  nb_test.py  test_sklearn_api.py  test_torch_api.py  tutorial_sklearn_api.ipynb
