[metadata]
name = data_iq
version = 0.1.0
description = Data-IQ: Characterizing subgroups with heterogeneous outcomes in tabular data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://arxiv.org/abs/2202.08836
author = Nabeel Seedat
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = data-centric AI, data quality, uncertainty

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.

install_requires =
    autograd_lib
    numpy
    torch>=1.9.1
    torchvision>=0.11.1
    importlib-metadata; python_version<"3.8"

[options.extras_require]
testing =
    aum
    autograd_lib
    bandit
    catboost>=1.1
    flake8
    ipykernel
    isort
    lightgbm
    matplotlib
    nltk
    notebook
    numpy
    nbconvert
    pandas>=1.3.5
    protobuf>=4.21.8
    scikit-learn>=1.0.2
    scipy>=1.7.3
    SciencePlots
    seaborn
    sdv>=0.17.1
    tqdm
    uq360
    umap-learn
    xgboost>=1.6.2
    xlrd
    pytest
    pytest-benchmark
    pytest-cov
    pytest-xdist[psutil]
    pytest-xprocess
    py # pytest 7.2.0 bug https://github.com/pytest-dev/pytest-xprocess/issues/110
    pre-commit
    click


[options.packages.find]
where = .
